sketch out interface

--- a/chat/chat.html
+++ b/chat/chat.html
@@ -1,13 +1,143 @@
 <head>
-  <title>chat</title>
+        <title>Meteor Chat</title>
 </head>
 
 <body>
-  {{> hello}}
+        <div class="container-fluid mainFill">
+                <div class="row-fluid rowA">
+                        <div class="span10 rowA" id="chatwnd">
+                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                        </div>
+                        <div class="span2 rowA" id="userlistwnd">
+                                <ul id="userlist">
+                                        <li>aaa</li>
+                                        <li>bbb</li>
+                                        <li>ccc</li>
+                                </ul>
+                        </div>
+                </div>
+                <div class="row-fluid rowB">
+                        <div class="span10 rowB">
+                                <input type="text" id="msginput" class="input-block-level" />
+                        </div>
+                        <div class="span2 rowB">
+                                <button class="btn">send</button>
+                        </div>
+                </div>
+        </div>
 </body>
-
-<template name="hello">
-  <h1>Hello World!</h1>
-  {{greeting}}
-  <input type="button" value="Click" />
+<!--
+<template name="MsgBox">
+        <input type="text" />
+        <button>Send</button>
 </template>
+
+<template name="Messages">
+        {{#each getMessages}}
+                <p>{{msg}}</p>
+        {{/each}}
+</template>
+//-->
