--- a/chat/chat.html
+++ b/chat/chat.html
@@ -6,138 +6,45 @@
         <div class="container-fluid mainFill">
                 <div class="row-fluid rowA">
                         <div class="span10 rowA" id="chatwnd">
-                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">aaa</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">bbb</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
-                                <p><span class="nick">ccc</span><span class="msg">blah blah</span></p>
+                                {{> Messages}}
                         </div>
                         <div class="span2 rowA" id="userlistwnd">
-                                <ul id="userlist">
-                                        <li>aaa</li>
-                                        <li>bbb</li>
-                                        <li>ccc</li>
-                                </ul>
+                                {{> Users}}    
                         </div>
                 </div>
                 <div class="row-fluid rowB">
-                        <div class="span10 rowB">
-                                <input type="text" id="msginput" class="input-block-level" />
-                        </div>
-                        <div class="span2 rowB">
-                                <button class="btn">send</button>
-                        </div>
+                        {{> Input}}
                 </div>
         </div>
 </body>
-<!--
-<template name="MsgBox">
-        <input type="text" />
-        <button>Send</button>
+
+<template name="Input">
+        <div class="span10 rowB">
+                <input type="text" id="msginput" class="input-block-level" />
+        </div>
+        <div class="span2 rowB">
+                <button class="btn">send</button>
+        </div>
+</template>
+
+<template name="Users">
+        <ul id="userlist">
+        {{#each Users}}
+                {{> user}}
+        {{/each}}
+        </ul>
+</template>
+
+<template name="user">
+        <li>{{nick}}</li>
 </template>
 
 <template name="Messages">
-        {{#each getMessages}}
-                <p>{{msg}}</p>
+        {{#each Messages}}
+                {{> message}}
         {{/each}}
 </template>
-//-->
+
+<template name="message">
+        <p><span class="nick">&lt;{{nick}}&gt;</span><span class="msg">{{msg}}</span></p>
+</template
