basic message entry and  display

--- a/chat/chat.html
+++ b/chat/chat.html
@@ -46,5 +46,9 @@
 </template>
 
 <template name="message">
-        <p><span class="nick">&lt;{{nick}}&gt;</span><span class="msg">{{msg}}</span></p>
-</template
+        <p>
+                <span class="time">{{time}}</span>
+                <span class="nick">&lt;{{nick}}&gt;</span>
+                <span class="msg">{{msg}}</span>
+        </p>
+</template>
