fix nicks and display timestamps as time

--- a/chat/chat.html
+++ b/chat/chat.html
@@ -47,7 +47,7 @@
 
 <template name="message">
         <p>
-                <span class="time">{{time}}</span>
+                <span class="time">{{date time}}</span>
                 <span class="nick">&lt;{{nick}}&gt;</span>
                 <span class="msg">{{msg}}</span>
         </p>
